...
                android:layout_height="wrap_content"
                android:text="First Name"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/profile_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Tom"
                android:textAppearance="@style/TextAppearance.AppCompat.Small" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
...
